# study-information-redundancy-rwd-distant-supervision

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
configs/: config_PR_PS.cfg  config_PR_RS.cfg  config_PR_SP_PS.cfg  config_PR_SP_RS.cfg  config_base.cfg
configs/torch/: config_test.cfg  config_test_by_bp_status.cfg
configs/torch/ce/: config_model_torch_ce.cfg
configs/torch/lrt/: config_model_torch_lrt.cfg
configs/torch/nce_rce/: config_model_torch_nce_rce_1.cfg
configs/torch/o2u/: config_model_torch_o2u_cyclical_step.cfg  config_model_torch_o2u_train_CE.cfg  config_model_torch_o2u_train_NCERCE.cfg
configs/torch_EL/ce/: config_model_torch_ce.cfg
configs/torch_EL/lrt/: config_model_torch_lrt.cfg  config_train_w_lrt_corrected_ds.cfg
configs/torch_EL/nce_rce/: config_model_torch_nce_rce_1.cfg  (+3 more)
notebooks/: selection docs patients test.md
notebooks/analyse/: Lecture annotation.md  lrt_analyse.md  o2u_analyse.md
notebooks/devtest/: CreateValidationSet.md  ReadTestSet.md
oeciml/: __init__.py  registry.py
oeciml/labelling/: labelling.py
oeciml/misc/: constants.py  data_wrangling.py  retrieve_data.py  utils.py
oeciml/pipelines/: __init__.py
oeciml/torchmodules/: __init__.py  classification_head.py  logger.py  loss.py  model.py  optimizer.py  task.py  trainer.py
scripts/dataset_generation/: cohort_selection.py  date_alignement.py  document_selection.py  export_torch_dataset.py  get_biopsy_reports.py  get_surgery_procedures.py  ner_dates.py  split_set.py
scripts/test/: script.py  script_test_by_bp_status.py
(+44 files in other folders)
